--- a/AngularSPA/packages.config
+++ b/AngularSPA/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AngularJS.Core" version="1.2.20" targetFramework="net451" />
   <package id="AngularJS.Route" version="1.2.20" targetFramework="net451" />
+  <package id="bootstrap" version="3.2.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
