--- a/AngularSPA/AngularSPA.csproj
+++ b/AngularSPA/AngularSPA.csproj
@@ -93,6 +93,7 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <None Include="scripts\jquery-2.1.1.intellisense.js" />
+    <Content Include="scripts\app\services\carMakeService.js" />
     <Content Include="scripts\app\views\step2.html" />
     <Content Include="scripts\app\views\step3.html" />
     <Content Include="scripts\app\views\step1.html" />
@@ -105,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CarMakeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -122,7 +124,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
