add server side validation for f/l name

--- a/AngularSPA/AngularSPA.csproj
+++ b/AngularSPA/AngularSPA.csproj
@@ -111,6 +111,7 @@
     <None Include="scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="scripts\app\directives\localizedDistance.js" />
     <Content Include="scripts\app\services\carMakeService.js" />
+    <Content Include="scripts\app\services\registrationService.js" />
     <Content Include="views\step2.html" />
     <Content Include="views\step3.html" />
     <Content Include="views\step1.html" />
@@ -125,6 +126,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\CarMakeController.cs" />
+    <Compile Include="Controllers\RegistrationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
