--- a/AngularSPA/packages.config
+++ b/AngularSPA/packages.config
@@ -4,6 +4,7 @@
   <package id="AngularJS.Route" version="1.2.20" targetFramework="net451" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.2.0" targetFramework="net451" />
+  <package id="jasmine-js" version="1.3.1.1" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net451" />
